<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.DateCalculatorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/seconds"
                android:textSize="@dimen/_12sdp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvMinutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/minutes"
                android:textSize="@dimen/_12sdp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/hours"
                android:textSize="@dimen/_12sdp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/days"
                android:textSize="@dimen/_12sdp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvWeeks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/weeks"
                android:textSize="@dimen/_12sdp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvWeekends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/weekends"
                android:textSize="@dimen/_12sdp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvBusinessDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/business_days"
                android:textSize="@dimen/_12sdp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:paddingBottom="@dimen/_7sdp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorReset"
                android:padding="@dimen/_10sdp"
                android:text="@string/reset"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                app:cornerRadius="@dimen/_5sdp"
                app:elevation="@dimen/_5sdp"
                app:icon="@drawable/rotate"
                app:iconSize="@dimen/_20sdp"
                app:rippleColor="@color/colorReset"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorShare"
                android:padding="@dimen/_10sdp"
                android:text="@string/share"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                app:cornerRadius="@dimen/_5sdp"
                app:elevation="@dimen/_5sdp"
                app:icon="@drawable/share"
                app:iconSize="@dimen/_20sdp"
                app:rippleColor="@color/colorShare"
                tools:ignore="TextSizeCheck" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>