<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NumberLocator">

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/number_locator"
                android:textSize="@dimen/_25sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/find_out_people"
                android:textAlignment="center"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="5dp"
                app:ccp_showFlag="true"
                app:ccp_defaultPhoneCode="92"
                app:ccpDialog_keyboardAutoPopup="true"
                app:ccp_showNameCode="false" />

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:maxLength="12"
                android:layout_margin="10dp"
                android:background="@drawable/bg_custom"
                android:elevation="5dp"
                android:id="@+id/mobileNumber"
                />


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/findLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="@dimen/_3sdp"
            android:padding="@dimen/_7sdp"
            android:text="@string/find_location"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_15sdp"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
